// Vitest Snapshot v1

exports[`ProseImage > Cloudinary + Unsplash 1`] = `
<figure>
  <div
    class="not-prose mx-auto"
    style="max-width: 400px;"
  >
    <div
      class="aspect-ratio"
      style="--width: 800; --height: 600;"
    >
      <img
        alt="description"
        class="rounded-lg"
        loading="lazy"
        sizes="(min-width: 640px) 620px, (min-width: 1024px) 700px, (min-width: 1280px) 780px, (min-width: 1536px) 920px, calc(100vw - (var(--content-padding) * 2))"
        src="https://res.cloudinary.com/silvenon/image/upload/c_limit,w_1024,f_auto,q_auto/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl"
        srcset="https://res.cloudinary.com/silvenon/image/upload/c_limit,w_640,f_auto,q_auto/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl 640w, https://res.cloudinary.com/silvenon/image/upload/c_limit,w_768,f_auto,q_auto/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl 768w, https://res.cloudinary.com/silvenon/image/upload/c_limit,w_800,f_auto,q_auto/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl 800w"
      />
    </div>
  </div>
  <figcaption>
    Photo by
     
    <a
      href="https://unsplash.com/@silvenon?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText"
    >
      silvenon
    </a>
     
    on
     
    <a
      href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
    >
      Unsplash
    </a>
  </figcaption>
</figure>
`;

exports[`ProseImage > Cloudinary 1`] = `
<div
  class="not-prose mx-auto"
  style="max-width: 400px;"
>
  <div
    class="aspect-ratio"
    style="--width: 800; --height: 600;"
  >
    <img
      alt="description"
      class="rounded-lg"
      loading="lazy"
      sizes="(min-width: 640px) 620px, (min-width: 1024px) 700px, (min-width: 1280px) 780px, (min-width: 1536px) 920px, calc(100vw - (var(--content-padding) * 2))"
      src="https://res.cloudinary.com/silvenon/image/upload/c_limit,w_1024,f_auto,q_auto/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl"
      srcset="https://res.cloudinary.com/silvenon/image/upload/c_limit,w_640,f_auto,q_auto/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl 640w, https://res.cloudinary.com/silvenon/image/upload/c_limit,w_768,f_auto,q_auto/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl 768w, https://res.cloudinary.com/silvenon/image/upload/c_limit,w_800,f_auto,q_auto/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl 800w"
    />
  </div>
</div>
`;

exports[`ProseImage > Unsplash 1`] = `
<figure>
  <img
    alt="description"
    class="rounded-lg"
    src="/hello-world.jpg"
  />
  <figcaption>
    Photo by
     
    <a
      href="https://unsplash.com/@silvenon?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText"
    >
      silvenon
    </a>
     
    on
     
    <a
      href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
    >
      Unsplash
    </a>
  </figcaption>
</figure>
`;

exports[`ProseImage > plain 1`] = `
<img
  alt="description"
  class="rounded-lg"
  src="/hello-world.jpg"
/>
`;
